--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!doctype.html>
 <html>
+  <head>
+	<title> Accomplishments and Experiences </title>
+  </head>
+  
   <body>
-    <p> </p>
+    <h1 style = "font-family:bookman;"> Starting out </h1>
+	<p style = "font-family:bookman;font-size:16px;"> Accomplishments and Experiences</p>
     
     
   </body>
