--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!doctype.html>
 <html>
   <head>
-	<title> Accomplishments and Experiences </title>
+	  <link rel stylesheet="style.css" type="text/css" href="style.css">
+	<title> Lawrence Le's Portfolio </title>
   </head>
   
   <body>
-    <h1 style = "font-family:bookman;"> Starting out </h1>
-	<p style = "font-family:bookman;font-size:16px;"> Accomplishments and Experiences</p>
-    
-    
+    <div class="box1align">
+      <div class = "box1">
+      <h1 style = "text-align:center"> Lawrence Le's Portfolio </h1>
+      </div>
+    </div>
+    <div class = "box2">
+      <p style = "font-size:30px;margin:px;"> About Me </p>
+    </div>
+    <div class = "box3">
+      <p style = "font-size:20px;"> I'm a Chinese-American 15 year-old boy whose parents moved to the United States to find a better career for themselves. My parents are ambitious and so am I. Once I set my mind to something, you can be sure that it will happen.
   </body>
 </html>
