--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype.html>
 <html>
   <head>
-	  <link rel stylesheet="style.css" type="text/css" href="style.css">
+	  <link rel = "stylesheet" href="style.css">
 	<title> Lawrence Le's Portfolio </title>
   </head>
   
