--- a/index.html
+++ b/index.html
@@ -1,20 +1,64 @@
-<!doctype.html>
+<!DOCTYPE html>
 <html>
-  <head>
-	  <link rel = "stylesheet" type = "text/css" href="style.css">
-	<title> Lawrence Le's Portfolio </title>
-  </head>
+
+<head>
+  <title> Lawrence Le's Portfolio </title>
+</head>
+<!--- Nav bar begins --->
+<ul class="navBar">
+  <li class="navBar"><a href="#about"> About Me </a></li>
+  <li class="navBar"><a href="#skills"> Skills </a></li>
+  <li class="navBar"><a href="#sampleWork"> Sample Work </a></li>
+  <li class="navBar"><a href="#contacts"> Contacts </a></li>
+</ul>
+<!--- Nav bar ends --->
+
+<body>
+  <div class="boxAlign">
+    <div class="titleBox">
+      <h1 style="text-align:center"> Lawrence Le's Portfolio </h1>
+    </div>
+  </div>
+<!--- Layer 1 starts --->
+<div class = "layer1Container">
+  <div class="aboutMeTitleBox">
+    <p style="font-size:30px;margin:px;" id="about"> About Me </p>
+  </div>
+      
+  <div class="aboutMeBox">
+    <p style="font-size:20px;"> I'm a Chinese-American 15 year-old boy whose parents moved to the United States to find a better career for themselves. My parents are ambitious and so am I. Once I set my mind to something, you can be sure that it will happen.</p>
+  </div>
   
-  <body>
-    <div class="box1align">
-      <div class = "box1">
-      <h1 style = "text-align:center"> Lawrence Le's Portfolio </h1>
-      </div>
+
+  <div class="box4">
+    <ul style="font-size:20px;">
+      <li> Nationality: Chinese </li>
+      <li> Sex: Male </li>
+      <li> Age: 15 </li>
+      <li> Height: 5'4" </li>
+      <li> Weight: 105 lbs </li>
+    </ul>
+  </div>
+<div class = "layer1Clear">
+  </div>
+  </div>
+<!---Layer 1 ends--->
+<!---Layer 2 starts --->
+  <div class="boxAlign">
+    <div class="box5">
+      <h1 style="text-align:center;"> Skills </h1>
     </div>
-    <div class = "box2">
-      <p style = "font-size:30px;margin:px;"> About Me </p>
+  </div>
+  
+  <div class = "boxAlign">
+    <div class ="box6">
+      <ul class = "font-size:20px;">  
+        <li> Proficient in Word, Excel, Google Docs and Google Sheets</li>
+        <li> Adept in Photoshop </li>
+        <li> Average type speed: 75 WPM </li>
+        <li> Can speak Mandarin </li>
+        
+      </ul>
     </div>
-    <div class = "box3">
-      <p style = "font-size:20px;"> I'm a Chinese-American 15 year-old boy whose parents moved to the United States to find a better career for themselves. My parents are ambitious and so am I. Once I set my mind to something, you can be sure that it will happen.
-  </body>
+  </div>
 </html>
