--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+   <link rel = "stylesheet" type = "text/css" href="style.css">
   <title> Lawrence Le's Portfolio </title>
 </head>
 <!--- Nav bar begins --->
