--- a/index.html
+++ b/index.html
@@ -21,33 +21,19 @@
     </div>
   </div>
 <!--- Layer 1 starts --->
-<div class = "layer1Container">
-  <div class="aboutMeTitleBox">
-    <p style="font-size:30px;margin:px;" id="about"> About Me </p>
+
+  <div class="aboutMeTitleBox" id = "about">
+    <p style="font-size:30px;margin:px;"> About Me </p>
   </div>
       
-  <div class="aboutMeBox">
-    <p style="font-size:20px;"> I'm a Chinese-American 15 year-old boy whose parents moved to the United States to find a better career for themselves. My parents are ambitious and so am I. Once I set my mind to something, you can be sure that it will happen.</p>
-  </div>
+  <div class = ""
+    <div class="aboutMeBox">
+      <p style="font-size:20px;"> I'm a Chinese-American 15 year-old boy whose parents moved to the United States to find a better career for themselves. My parents are ambitious and so am I. Once I set my mind to something, you can be sure that it will happen.</p>
+    </div>
   
-
-  <div class="box4">
-    <ul style="font-size:20px;">
-      <li> Nationality: Chinese </li>
-      <li> Sex: Male </li>
-      <li> Age: 15 </li>
-      <li> Height: 5'4" </li>
-      <li> Weight: 105 lbs </li>
-    </ul>
-  </div>
-<div class = "layer1Clear">
-  </div>
-  </div>
-<!---Layer 1 ends--->
-<!---Layer 2 starts --->
   <div class="boxAlign">
     <div class="box5">
-      <h1 style="text-align:center;"> Skills </h1>
+      <h1 style="text-align:center;" id = "skills"> Skills </h1>
     </div>
   </div>
   
@@ -57,9 +43,16 @@
         <li> Proficient in Word, Excel, Google Docs and Google Sheets</li>
         <li> Adept in Photoshop </li>
         <li> Average type speed: 75 WPM </li>
-        <li> Can speak Mandarin </li>
-        
+        <li> Can speak Mandarin </li>  
       </ul>
     </div>
   </div>
+
+  
+  <div class = "boxAlign">
+    <div class = "sampleWorkBox">
+      <h1 style = "text-align:center;" id = "sampleWork"> Sample Work </h1>
+    </div>
+  </div>
 </html>
+  
